--- a/LimenawebApp/Views/Main/Dashboard_Inventory.cshtml
+++ b/LimenawebApp/Views/Main/Dashboard_Inventory.cshtml
@@ -61,7 +61,7 @@
                                         <!-- /card heading -->
                                         <!-- Card Tools -->
                                         <div class="dt-card__tools">
-                                            <a href="javascript:void(0)" class="dt-card__more">See All</a>
+                                            <a href="@Url.Action("Projects", "Inventory")" class="dt-card__more">See All</a>
                                         </div>
                                         <!-- /card tools -->
 
@@ -73,7 +73,7 @@
                                         <!-- Widget-->
                                         <div class="dt-widget dt-widget-xl dt-widget-separator dt-widget-hover">
                                             <!-- Widget Item -->
-                                            <div class="dt-widget__item">
+                                            @*<div class="dt-widget__item">
 
                                                 <!-- Widget Image -->
                                                 <div class="dt-widget__img">
@@ -109,89 +109,14 @@
                                                 </div>
                                                 <!-- /widget extra -->
 
-                                            </div>
+                                            </div>*@
                                             <!-- /widget item -->
                                             <!-- Widget Item -->
-                                            <div class="dt-widget__item">
 
-                                                <!-- Widget Image -->
-                                                <div class="dt-widget__img">
-                                                    <!-- Avatar -->
-                                                    <i class="icon icon-projects text-orange icon-3x"></i>
-                                                    <!-- /avatar -->
-                                                </div>
-                                                <!-- /widget image -->
-                                                <!-- Shape -->
-                                                <div class="dot-shape dot-shape-lg bg-light mx-5"></div>
-                                                <!-- /shape -->
-                                                <!-- Widget Info -->
-                                                <div class="dt-widget__info align-text-top">
-                                                    <a class="dt-widget__title" href="javascript:void(0)">Wireframe of new project</a>
-                                                    <div class="dt-indicator-item__info" data-fill="0" data-max="100"
-                                                         data-percent="true"
-                                                         style="width: 120px">
-                                                        <div class="dt-indicator-item__bar">
-                                                            <div class="dt-indicator-item__fill bg-success"></div>
-                                                        </div>
-                                                        <span class="dt-indicator-item__count ml-3">0</span>
-                                                    </div>
-                                                </div>
-                                                <!-- /widget info -->
-                                                <!-- Widget Extra -->
-                                                <div class="dt-widget__extra">
-                                                    <div class="dt-task">
-                                                        <div class="dt-task__number">0 Tasks</div>
-                                                        <a class="dt-task__redirect" href="javascript:void(0)">
-                                                            <i class="icon icon-open-new-tab"></i>
-                                                        </a>
-                                                    </div>
-                                                </div>
-                                                <!-- /widget extra -->
-
-                                            </div>
                                             <!-- /widget item -->
 
                                             <!-- Widget Item -->
-                                            <div class="dt-widget__item">
 
-                                                <!-- Widget Image -->
-                                                <div class="dt-widget__img">
-                                                    <!-- Avatar -->
-                                                    <i class="icon icon-revenue-new text-yellow icon-3x"></i>
-                                                    <!-- /avatar -->
-                                                </div>
-                                                <!-- /widget image -->
-                                                <!-- Shape -->
-                                                <div class="dot-shape dot-shape-lg bg-info mx-5"></div>
-                                                <!-- /shape -->
-                                                <!-- Widget Info -->
-                                                <div class="dt-widget__info align-text-top">
-                                                    <a class="dt-widget__title" href="javascript:void(0)">
-                                                        HR Management
-                                                        System
-                                                    </a>
-                                                    <div class="dt-indicator-item__info" data-fill="60" data-max="80"
-                                                         data-percent="true"
-                                                         style="width: 120px">
-                                                        <div class="dt-indicator-item__bar">
-                                                            <div class="dt-indicator-item__fill bg-info"></div>
-                                                        </div>
-                                                        <span class="dt-indicator-item__count ml-3">0</span>
-                                                    </div>
-                                                </div>
-                                                <!-- /widget info -->
-                                                <!-- Widget Extra -->
-                                                <div class="dt-widget__extra">
-                                                    <div class="dt-task">
-                                                        <div class="dt-task__number">117 Tasks</div>
-                                                        <a class="dt-task__redirect" href="javascript:void(0)">
-                                                            <i class="icon icon-open-new-tab"></i>
-                                                        </a>
-                                                    </div>
-                                                </div>
-                                                <!-- /widget extra -->
-
-                                            </div>
                                             <!-- /widget item -->
 
                                           
