Agregando nuevo proceso de Compras

--- a/LimenawebApp/Views/Inventory/Binloc.cshtml
+++ b/LimenawebApp/Views/Inventory/Binloc.cshtml
@@ -141,6 +141,41 @@
                             </div>
                             <div class="row">
                                 <div class="col-md-6 col-12">
+                                    <a href="@Url.Action("Binloc_lstproduct", "Inventory", new { idproj=ViewBag.project.ID_project})">
+                                        <!-- Card -->
+                                        <div class="dt-card">
+
+                                            <!-- Card Body -->
+                                            <div class="dt-card__body p-xl-8 py-sm-8 py-6 px-4">
+
+
+
+                                                <!-- Media -->
+                                                <div class="media">
+
+                                                    <i class="icon icon-assignment icon-5x mr-xl-5 mr-3 align-self-center"></i>
+
+                                                    <!-- Media Body -->
+                                                    <div class="media-body">
+                                                        <p class="mb-1 h1">Assigned Products</p>
+                                                        <span class="d-block text-light-gray">Choose this option if a product was assigned.</span>
+                                                    </div>
+                                                    <!-- /media body -->
+
+                                                </div>
+
+                                                <!-- /media -->
+
+                                            </div>
+                                            <!-- /card body -->
+
+                                        </div>
+                                        <!-- /card -->
+                                    </a>
+                                </div>
+
+
+                                <div class="col-md-6 col-12">
 
                                     <!-- Card -->
                                     <div class="dt-card">
