--- a/LimenawebApp/Views/Shared/Scripts_main.cshtml
+++ b/LimenawebApp/Views/Shared/Scripts_main.cshtml
@@ -335,7 +335,8 @@ else
             document.getElementById("drop1").style.display = "block";
             document.getElementById("reportop1_submenu").style.display = "block";
             document.getElementById("tasks_submenu").style.display = "block";
-            document.getElementById("home_menuInventory").style.display = "block";
+            //document.getElementById("home_menuInventory").style.display = "block";
+            document.getElementById("marketing_menu").style.display = "block";
         }
         if (element == "Customer") {
             document.getElementById("home_menuCustomers").style.display = "block";
